# Titlechain

./: .gitignore  .zshrc  GUI 2.py  README.md  TitleChain.py  TitleChain.spec  app.py  blockchain.py  blockchain_tab 2.py  blockchain_tab.py  generate_keys.py  main.py  miner.py  mls_tab.py  package-lock.json  package.json  pyproject.toml  requirements.txt  stateTitle.json  title_search.py  transaction_data.csv  transaction_form.py  transaction_man.py  utils.py  views.py
config/: requirements.txt
dotnet/: dotnet.csproj
public/: index.html
src/: App.js  blockchain_tab.py  index.css  index.js  title_search.py  transaction_form.py  views.py
src/components/: BlockchainView.js  MiningMonitorView.js  SearchView.js  TotalFeesView.js  TransactionForm.js
