[tool.poetry]
name = "titlechain"
version = "0.1.0"
description = "A software that utilizes a blockchain in order to secure property history."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
