[tool.poetry]
name = "titlechain"
version = "0.1.0"
description = "A software that utilizes a blockchain in order to secure property history."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
flask = "^3.0.3"
requests = "^2.32.3"

[tool.poetry.dependencies.pyinstaller]
version = "^6.10.0"
python = ">=3.11,<3.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
